--- a/Calculator.Tests/Calculator.Tests.csproj
+++ b/Calculator.Tests/Calculator.Tests.csproj
@@ -52,7 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="RevPolNotationTests.cs" />
+    <Compile Include="RevPolNotation.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CalculateRevPolNotation.Tests.cs" />
   </ItemGroup>
