--- a/Calculator.Tests/Calculator.Tests.csproj
+++ b/Calculator.Tests/Calculator.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="RevPolNotation.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CalculateRevPolNotation.Tests.cs" />
+    <Compile Include="PrepInputExpression.Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Calculator\Calculator.csproj">
