--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalculateRevPolNotation.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="ExpresionExceptions.cs" />
     <Compile Include="PrepInputExpression.cs" />
     <Compile Include="RevPolNotation.cs" />
